# DolfinFisherSolver

./: .gitignore  README.md
DolfinFisherSolver/: Brain.cpp  Brain.h  CMakeLists.txt  FisherNewtonContainer.cpp  FisherNewtonContainer.h  FisherProblem.cpp  FisherProblem.h  Initializers.cpp  Initializers.h  L2Error2D.h  L2Error2D.ufl  L2Error3D.h  L2Error3D.ufl  PrintableComponent.h  ProblemSolverContainer.h  ReactionDiffusionProblem.cpp  ReactionDiffusionProblem.h  ReaderWriter.cpp  ReaderWriter.h  RuntimeTracker.cpp  RuntimeTracker.h  SolvableProblem.h  Tensors.cpp  Tensors.h  TimeStepper.cpp  TimeStepper.h  VariationalFisherEquation2D.h  VariationalFisherEquation2D.ufl  VariationalFisherEquation3D-Q4.h  VariationalFisherEquation3D.h  VariationalFisherEquation3D.ufl  VariationalFisherEquation3DQ4.h  VariationalFisherEquation3DQ4.ufl  VariationalReactionDiffusion2D.h  VariationalReactionDiffusion2D.ufl  VariationalReactionDiffusion3D.h  VariationalReactionDiffusion3D.ufl  main.cpp
DolfinFisherSolver/archive/: ValueMapper.cpp  ValueMapper.h
ParameterInference/: README.md  function-to-pvd.py  paraview-filter-total-volume.py  paraview-filter-volume-concentration.py  paraview-progfil-abs-volume.py  paraview-progfil-tot-volume.py  plot-qoi.py  setupRun.py
Performance/: README.md
Performance/output/cube-results/AAA cube version source files/: main_old.cpp
Performance/plotting/: plot-iterationdata.py  plot-parameter-study.py  plot-speed-test.py  plot-weak-scaling.py
Performance/src/: CMakeLists.txt  cmake_init.sh  cmake_init_debug.sh  main.cpp  runPerformanceTest.sh
brain-data/brainweb/: plot_brain.py
mesh/: analyze-mesh.py  simple_mesh_creator.py  xml-to-h5.py  xml-to-xdmf.py
test/: CMakeLists.txt  Tester  tester.cpp
